<resources>
    <string name="app_name">LittleDot</string>
    <string name="recommend_app">Hey, check out this app for parents, it seems really good!</string>
    <string name="shared_message">Shared %1$s via</string>
    <string name="button_report">Report</string>
    <string name="email_subject_report">LittleDot crashed!</string>
    <string name="title_dialog_report">Sorry, the app crashed!</string>
    <string name="content_dialog_report">Sorry, we will try to solve this problem as fast as possible. Thank you by report.</string>
    <string name="action_settings">Settings</string>
    <string name="format_day">EEEE</string>
    <string name="format_time">HH:mm</string>
    <string name="format_pretty_time">MMMM dd, yyyy</string>
    <string name="format_date_service">yyyy-MM-dd\'T\'HH:mm:ssZ</string>
    <string name="format_date_short">MMM/dd</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">CANCEL</string>
    <string name="button_next">Next</string>
    <string name="button_optional">Optional</string>
    <string name="button_done">Done</string>
    <string name="button_add">Add %1$s entry</string>
    <string name="button_skipped">Skipped</string>
    <string name="button_erase_all_data">Delete data</string>
    <string name="option_edit">Edit</string>
    <string name="option_delete">Delete</string>
    <string name="option_show">Show Details</string>
    <string name="option_take_photo">Take from Camera</string>
    <string name="option_take_from_gallery">Take from Gallery</string>
    <string name="date_dialog">Day:</string>
    <string name="email_option_doctor_label">Prepare email message for\ndoctor containing:</string>
    <string name="email_option_doctor_temperature">Temperature</string>
    <string name="email_option_doctor_sickness">Sickness</string>
    <string name="email_option_doctor_medicines">Medicines</string>
    <string name="email_option_doctor_vaccines">Vaccines</string>
    <string name="email_option_doctor_feeding">Feeding</string>
    <string name="email_option_doctor_sleeping">Sleeping</string>
    <string name="email_option_doctor_diapers">Diapers</string>
    <string name="email_option_doctor_growth">Growth</string>
    <string name="email_option_doctor_milestone">Milestones</string>
    <string name="email_option_doctor_teeth">Teeth</string>
    <string name="email_option_doctor_other">Other</string>
    <string name="temperature_advices_when_title">When to take a temperature?</string>
    <string name="temperature_advices_when_content">\u0020\u0020\u0020Whenever child seem warm, fussy, has reduced appetite or lees active then usually or when there are other signs of disease (vomiting, diarrhea, cough, rash or some other sign). Estimation of fever in child by palpation is unreliable! For instance, children with high fever have cold hand, feet and forehead due to the failure (immaturity) of the center for temperature regulation. High fever can lead to dehydration (during fever fluids intake is increased 2-3 fold). Most reliable sign of dehydration are dry lips and tongue which turns to white.</string>
    <string name="temperature_advices_how_title">How to take a temperature?</string>
    <string name="temperature_advices_how_content">\u0020\u0020\u0020In children aged up to one year it is recommended to take a temperature rectally by inserting a thermometer for about 2 cm. Hold thermometer for approx. 2-3 minutes till line stops increasing (or electronic thermometer beeps). In older children thermometer is placed in the middle of axilla is dried, and put upper arm by the body. It takes 10 minutes to take a temperature. Normal temperature measured rectally is about 37,5 °C and 37,0 °C axillary. If the child is physically active (crying, feeding, running), if surrounding or clothes are to warm, rectal temperature can reach 38 °C.</string>
    <string name="temperature_advices_elevated">When and how to take down elevated body temperature?</string>
    <string name="temperature_advices_elevated_content_1">\u0020\u0020\u0020Fever is one of the natural ways of body defense against infection. So it is reasonable to start taking down temperature when it rises above 38 °C axillary or 38,5 °C rectally. More precisely, latest recommendations advise to take down fever when child show signs of prostration and change of mood (becomes cranky). So if the child is happily running around and has 39 °C it is not necessarily needed to administer antipyretic, but on a contrary, if the child with a slight fever looks cranky and tired it should be given.</string>
    <string name="temperature_advices_elevated_content_2">\u0020\u0020\u0020Fever can be reduced by drugs and cooling. Among antipyretics most appropriate and least harmful are paracetamol and ibuprofen (in a form of syrup and suppositories), having strictly in mind not to exceed recommended doses. If the child is running high fever, it should be immediately undressed and given antipyretic.</string>
    <string name="temperature_advices_elevated_content_3">\u0020\u0020\u0020To enable gradual body cooling, room temperature should be lowered and clothing reduced. It is recommended to wait for about 20 minutes after antipyretic administration with cooling with bath, sponging or shower. During this period antypyretic will block center that trigger shivering. Namely, shivering is very powerful way of increasing the body temperature, so triggered by the sensation of cold bath it can increase fever for 1-2 degrees instead of expected decrease! Most appropriate would be bath-tub filled with water of around 37 °C (or 2-3 degrees less than body temperature) and to let child ply in it for about 20 minutes and gradually cool down. Skin rubbing with alcohol is not recommended - sudden cooling of skin causes vasoconstriction and reduces cooling effect, some of the alcohol penetrates skin and some vapors are inhaled. If body temperature is not reduced, following bath, wrap the child in wet sheet or towel previously soaked in room temperature water, and change it periodically, as long as needed.</string>
    <string name="temperature_advices_elevated_content_4">\u0020\u0020\u0020During the fever child need much more liquids (daily need of liquid can be even doubled), so it is important to offer water, juice or room temperature tea. Only after those measures are undertaken, medical assistance should be asked for.</string>
    <string name="temperature_advices_important_title">It is important to have antipyretics at home before child gets ill!</string>
    <string name="temperature_advices_assistance_title">When to ask for medical assistance without delay?</string>
    <string name="temperature_advices_assistance_content">\u0020\u0020\u0020In infants, particularly in babies up to 3 months of age, after taking down the fever it is necessary to look for a doctor. In older children, if fever exceeds 40 °C, it is also recommended to look for a doctor during the first day of illness as it might be a sign of serious bacterial infections. Shaking (excessive shivering) during the raise of the temperature,rash and/or worsening of child\'s general condition require medical assistance without delay. Avoid overheating (overdressing, covering) of the child during transportation.</string>
    <string name="temperature_doses_ibuprofen"><b>5-10 mg/kg of body mass/doses.</b>\nDosage: Dosages are based on the child\'s weight. Give the medicine every 6 hours. Do not give more than 4 doses in a 24-hour period.</string>
    <string name="temperature_doses_weight">Weight</string>
    <string name="temperature_doses_Dose">Dose</string>
    <string name="temperature_weight_kg">%1$s kg</string>
    <string name="vaccine_age">At age: %1$d months</string>
    <string name="vaccine_dose">Dose: %1$d/%2$d</string>
    <string name="vaccine_info_check">Check vaccination: %1$s</string>
    <string name="vaccine_hepatitis_b">
        1. What is hepatitis B?\n\nHepatitis B is an inflammation of the liver which is caused by the hepatitis B virus, It usually manifests itself
        with vague symptoms (general feebleness, nausea, loss of appetite), and some infected persons may develop jaundice.\n\n
        &#160;&#160;&#160;· In children, the disease can go without symptoms, but often the insufficiently strong defense system of child\'s
        organism cannot completely destroy the virus. In that case, the child will become a chronic carrier of the virus and have
        a chronic illness, which can later develop into serious complications, such as cirrhosis or primary carcinoma of the liver.\n
        &#160;&#160;&#160;· The younger the child, the greater the chance that after being infected with the virus of hepatitis B, he or she will develop
        serious complications in the form of a chronic liver disease.\n\nA child can be infected with the virus of hepatitis B:\n\n
        &#160;&#160;&#160;· at birth from a mother who is a chronic carrier of the virus;\n
        &#160;&#160;&#160;· in close contact with an infected person (using a common toothbrush or manicure set, through small wounds, bites
        and scratches);\n
        &#160;&#160;&#160;·through infected blood, for example, accidentally through and infected injection needle which has benn contaminated,
        or through infected blood products;\n
        &#160;&#160;&#160;· sex is the most frequent cause of infection in adolescents and adults.\n\nVaccination against hepatitis B can prevent the occurrence of the disease.\n\n2. How is a child vaccinated against hepatitis B?\n\nThe vaccination scheme against hepatitis B contains three doses of vaccine which the child must receive in order to be
        protected fully and for a long time against infection.\n\n
        &#160;&#160;&#160;· The first and second dose are administered 1 month apart, and the third dose is administered 5 months after the second dose,
        or according to another scheme if the doctor so decides. Consult your doctor on the necessity for further revaccination.\n\nSince
        1999, according to the Mandatory Immunization Schedule, in the Republic of Croatia children in the 6th form of primary school
        are vaccinated against hepatitis B, while children born in after 2007 are vaccinated while still in the maternity hospital.\n\nIf a child must be protected earlier (for children born 2007), this is possible after consultation with the child\'s
        paediatrician.\n\nChildren of mothers who are chronic carriers of the virus are immunized immediately after birth. All pregnant women
        are routinely tested for hepatitis B!\n\n3. Some children must not be vaccinated or have to wait.\n\n
        &#160;&#160;&#160;·Children who after the previous vaccination against hepatitis B developed an allergic reaction to the vaccine and
        children who are allergic to any component of the vaccine must not be vaccinated.\n
        &#160;&#160;&#160;· Children who are seriously ill and have a high fever must wait until they recover.\n\n
        4. What are the possible adverse reactions to the vaccine?\n\nThe vaccine against hepatitis B is very safe.\n\nMild reactions (which are, in fact, the most commonly recorded) include:\n\n
        &#160;&#160;&#160;· soreness, redness and hardening of the skin at the site of the injection\n\n
        Moderate reactions (rare):\n
        &#160;&#160;&#160;· tiredness, fever, temporary high temperature\n
        &#160;&#160;&#160;· rash, itching\n
        &#160;&#160;&#160;·nausea, vomiting, diarrhoea, stomach pain.\n\nThese present not obstacle for further vaccination.\n\nAlthough extremely rare, an allergic reaction may occur several minutes to several hours after the administration of
        vaccine. The symptoms include difficulty breathing, hoarseness, a rash, paleness, general feebleness, increased heart
        rate, and vertigo.\n\nIf you notice any of the above symptoms contact the doctor immediately!</string>
</resources>