<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="@color/window_background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/window_background"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/text_normal"
            android:text="@string/temperature_advices_when_title"
            android:layout_marginBottom="12dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/text_normal"
            android:text="@string/temperature_advices_when_content"
            android:layout_marginBottom="12dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/text_normal"
            android:layout_marginBottom="12dp"
            android:text="@string/temperature_advices_how_title"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/text_normal"
            android:layout_marginBottom="12dp"
            android:text="@string/temperature_advices_how_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/text_normal"
            android:layout_marginBottom="12dp"
            android:text="@string/temperature_advices_elevated"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/text_normal"
            android:layout_marginBottom="12dp"
            android:text="@string/temperature_advices_elevated_content_1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/text_normal"
            android:layout_marginBottom="12dp"
            android:text="@string/temperature_advices_elevated_content_2"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/text_normal"
            android:layout_marginBottom="12dp"
            android:text="@string/temperature_advices_elevated_content_3"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/text_normal"
            android:layout_marginBottom="12dp"
            android:text="@string/temperature_advices_elevated_content_4"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/text_normal"
            android:gravity="center"
            android:layout_marginBottom="12dp"
            android:text="@string/temperature_advices_important_title"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/text_normal"
            android:layout_marginBottom="12dp"
            android:text="@string/temperature_advices_assistance_title"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/text_normal"
            android:layout_marginBottom="12dp"
            android:text="@string/temperature_advices_assistance_content"/>


    </LinearLayout>
</ScrollView>