<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/window_background">

    <TextView
        android:id="@+id/doses_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textColor="@color/text_normal"
        android:textSize="16sp"
        android:text="@string/temperature_doses_ibuprofen"/>

    <View
        android:layout_below="@+id/doses_description"
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/separate_line"/>

    <LinearLayout
        android:id="@+id/container_doses"
        android:layout_below="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/temperature_doses_weight"
                android:gravity="center"
                android:textSize="16sp"
                android:padding="4dp"/>

            <TextView
                android:id="@+id/weight_child"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/temperature_weight_kg"
                android:textSize="16sp"
                android:padding="2dp"
                android:gravity="center"
                android:textColor="@color/temperature_text"/>

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/separate_line"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/temperature_doses_Dose"
                android:gravity="center"
                android:textSize="16sp"
                android:padding="4dp"/>

            <TextView
                android:id="@+id/doses_child"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="16sp"
                android:padding="2dp"
                android:gravity="center"
                android:textColor="@color/temperature_text"/>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_below="@+id/container_doses"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/separate_line"/>

</RelativeLayout>